fixing ef-button and adding proper contrasting text colors for colors

--- a/src/components/ef-button/ef-button.css
+++ b/src/components/ef-button/ef-button.css
@@ -5,7 +5,7 @@
   --ef-btn-bg-active: oklch(from var(--ef-btn-bg) calc(l - 0.05) c h);
   --ef-btn-border: transparent;
   --ef-btn-border-hover: transparent;
-  --ef-btn-text: var(--ef-color-text-opposite);
+  --ef-btn-text: var(--ef-color-on-primary);
   --ef-btn-focus-ring: oklch(from var(--ef-btn-bg) calc(l + 0.20) c h);
   --ef-btn-radius: 0.375rem;
 
